# naviamp

./: .env.android-signing.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  build.gradle.kts  settings.gradle.kts
.forgejo/workflows/: release-builds.yml  version-check.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tag-release-builds.yml
apps/android/: build.gradle.kts
apps/android/src/main/: AndroidManifest.xml  baseline-prof.txt
apps/android/src/main/kotlin/app/naviamp/android/: AndroidAppSupport.kt  AndroidDispatchers.kt  AndroidEmbeddedLyrics.kt  AndroidLibrarySync.kt  AndroidLrclibLyricsClient.kt  AndroidPopularTracksHttpClient.kt  AndroidRadioPlaylist.kt  AndroidSettingsStore.kt  AndroidStorage.kt  MainActivity.kt
apps/android/src/main/res/drawable/: ic_auto_charts.xml  ic_auto_home.xml  ic_auto_library.xml  ic_auto_queue.xml  ic_auto_radio.xml  ic_favorite_24.xml  ic_repeat_24.xml  ic_shuffle_24.xml
apps/android/src/main/res/values/: styles.xml
apps/android/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
apps/android/src/test/kotlin/app/naviamp/android/: AndroidPlaybackSessionControllerTest.kt
apps/desktop/: build.gradle.kts  proguard-rules.pro
apps/desktop-slint/: .gitignore  Cargo.toml  README.md  build.rs
apps/desktop-slint/scripts/: package-macos.sh  prepare-bass.ps1
apps/desktop-slint/src/: app.rs  app.slint  domain.rs  image_cache.rs  library_store.rs  main.rs  playback.rs  queue.rs  settings.rs  storage.rs  ui.rs  visualizer.rs  worker.rs
apps/desktop-slint/src/playback/: bass.rs
apps/desktop-slint/src/playback/bass/: engine.rs  ffi.rs  runtime.rs  tags.rs
apps/desktop-slint/src/provider/: mod.rs  navidrome.rs
apps/desktop-slint/src/provider/fixtures/: search3.json
apps/desktop/src/desktopMain/kotlin/app/naviamp/desktop/: AlbumDetailPanel.kt  AppColors.kt  AppMenus.kt  AppNavigation.kt  ArtistDetailPanel.kt  AudioTagReader.kt  AudioWaveformAnalyzer.kt  ConnectionPanel.kt  CoverArtThumb.kt  DesktopAppSupport.kt  DesktopAudioPlayer.kt  DesktopCache.kt  DesktopDispatchers.kt  DesktopPopularTracksHttpClient.kt  DesktopWindowSupport.kt  DetailActionIconButton.kt  DownloadsPanel.kt  HomePanel.kt  InternetRadioPanel.kt  LibraryPanel.kt  LibrarySync.kt  LrclibLyricsClient.kt  LyricsParsing.kt  Main.kt  MediaRows.kt  NavigationIcons.kt  NowPlayingPanel.kt  PlaybackFormatting.kt  PlaybackSettingsPanel.kt  PlaylistPanels.kt  SearchPanel.kt  SettingsPanel.kt  StatsForNerdsWindow.kt  TransportIcons.kt
apps/desktop/src/desktopMain/resources/icons/: naviamp.icns
apps/desktop/src/desktopTest/kotlin/app/naviamp/desktop/: AudioTagReaderTest.kt  LyricsParsingTest.kt
core/domain/: build.gradle.kts
core/domain/src/commonMain/kotlin/app/naviamp/domain/: InternetRadioTracks.kt  Models.kt
core/storage/: build.gradle.kts
core/storage/src/commonMain/sqldelight/app/naviamp/storage/: 1.sqm  10.sqm  11.sqm  14.sqm  15.sqm  2.sqm  3.sqm  4.sqm  5.sqm  6.sqm  7.sqm  8.sqm  9.sqm  NaviampStorage.sq
core/ui/: build.gradle.kts
core/ui/src/androidMain/kotlin/app/naviamp/ui/: NaviampSleepTimerEffects.android.kt  NaviampTooltip.android.kt  PlatformCoverArt.android.kt  PlatformLiveVisualizerSurface.android.kt
core/ui/src/commonMain/composeResources/values/: strings.xml
core/ui/src/commonMain/composeResources/values-es/: strings.xml
core/ui/src/commonMain/kotlin/app/naviamp/ui/: Formatting.kt  LyricMirrorTunnelVisualizerSurface.kt  MediaUiMappers.kt  NativeMetalShaderTranslator.kt  NativeVisualizerShaders.kt  NaviampActionCatalog.kt  NaviampAppBackground.kt  NaviampIcons.kt  NaviampLanguage.kt  NaviampMediaComponents.kt  NaviampNowPlayingUi.kt  NaviampPageLayout.kt  NaviampPlayerColors.kt  NaviampPlaylistEditorUi.kt  NaviampPlaylistUi.kt  NaviampRouteContent.kt  (+15 more)
docs/: BRANCH-NOTES-android-auto-crossfade.md  BRANCH-NOTES-explicit-up-next-queue.md  BRANCH-NOTES-swipe-queue-actions.md  PROJECT_NOTES.md  TODO.md  android-auto-1.0.md  android-auto-polish-checklist.md  android-mainactivity-reduction.md  android-mainactivity-split.md  android-parity-roadmap.md  architecture.md  audio-output-selection.md  bass-jni-design.md  competitive-feature-watchlist.md  decisions.md  desktop-main-reduction.md  desktop-main-split.md  desktop-performance-optimization.md  desktop-playback.md  gpu-visualizer-roadmap.md  kotlin-bass-roadmap.md  learning-kotlin.md  linux-desktop-support.md  multi-library-support.md  native-visualizer-renderer-roadmap.md  naviamp-connect-roadmap.md  new-features-roadmap.md  quality-of-life-improvements.md  release-builds.md  roadmap.md  rust-slint-migration-plan.md  setup.md  shared-architecture-cleanup.md  shared-core-extraction.md  shared-storage-cache-architecture.md  shared-ui-reduction.md  smart-playlists.md  sonic-similarity-roadmap.md
docs/release-notes/: v0.15.1.md  v0.15.2.md  v0.15.3.md  v0.15.4.md  v0.15.5.md  v0.16.0.md  v0.16.1.md  v0.16.2.md  v0.16.3.md  v0.16.4.md  v0.17.0.md  v0.18.0.md  v0.19.0.md
gradle/: libs.versions.toml
native/bass-jni/: CMakeLists.txt  README.md
native/bass-jni/include/: naviamp_bass_jni.h
native/bass-jni/src/: naviamp_bass_jni.cpp
native/visualizer-metal/: CMakeLists.txt
native/visualizer-metal/src/: naviamp_visualizer_metal.mm
native/visualizer-opengl/: CMakeLists.txt
native/visualizer-opengl/src/: naviamp_visualizer_opengl.cpp
providers/navidrome/: build.gradle.kts
scripts/: android-auto-dhu.sh  android-observe-app.sh  bump-version.sh  check-version-bump.sh  macos-observe-app.sh  require-android-signing.sh  validate-release-tag.sh  validate-version.sh
(+496 files in other folders)
