[package]
name = "naviamp-slint"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
directories = "5"
md5 = "0.7"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slint = "1"
toml = "0.8"
urlencoding = "2"

[build-dependencies]
slint-build = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
